Fixed the added pages with wrong content + added 2 new games to the projects section

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             <li data-menuanchor="page3">
                 <a href="#page3">Projects</a>
             </li>
-            <li data-menuanchor="page5">
+            <!--<li data-menuanchor="page5">
                 <a href="#page4">Resume</a>
             </li>
-            <!-- <li data-menuanchor="page4">
+             <li data-menuanchor="page4">
                 <a href="#page4">Services</a>
             </li>
             <li data-menuanchor="page6">
                 <a href="#page6">Reviews</a>
-            </li> -->
+            </li> 
             <li data-menuanchor="page7">
                 <a href="#page5">Contact</a>
-            </li>
+            </li>-->
         </ul>
         <div class="menu-footer right-boxed">
             <div class="social-list">
@@ -84,7 +84,7 @@
             <div class="copy">
                 <!--© Jonny 2017. All Rights Reseverd<br> ??? its open source so i dont think this is necessary but ill include the designed by-->
                 Email: JustinRioux0@outlook.com </br></br>
-                Original Temp Design by LoganCee
+                <!-- I changed to much for this Original Temp Design by LoganCee-->
             </div>
         </div>
     </div>
@@ -281,8 +281,11 @@
                         Your browser does not support the video tag.
                         </video>
                     </div>
-                    <div class="section-bg" style="background-image:url(images/bg/bg2-6.jpg);"></div>
+                    <div class="section-bg" style="background-image:url(images/Projects/6NumberCruncher/+NCIi4.png);"></div>
+                    <div class="section-bg" style="background-image:url(images/Projects/7ProjectRise/CrapQuality_Screenshot_2025-06-05.jpg);"></div>
+                
                 </div>
+                
                 <!-- Project Background Images -->
 
                 <div class="scrollable-content">
@@ -302,7 +305,7 @@
                                                             <div class="project-box-inner">
                                                                 <h5>2.5D Crystal Knight (4 members)</h5>
                                                                 <div class="project-category">Game Development</div>
-                                                                <div class="project-category">Role: Programmer</div>
+                                                                <div class="project-category">Role: 2.5D Programmer</div>
                                                                 <!-- <div class="project-category">->2.5D RPG Quest Game</div> -->
                                                                 <!-- <div class=" pull-right">Click For More</div> -->
                                                             </div>
@@ -350,23 +353,25 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <!-- <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
+                                                    <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
-                                                                <h5>Rennovate Toilet</h5>
-                                                                <div class="project-category">House Design</div>
+                                                                <h5>Number Cruncher</h5>
+                                                                <div class="project-category">Game Development & JSON File Saving</div>
+                                                                <div class="project-category">Role: Individual Player Save Game Current Progress Developer</div>
                                                             </div>
                                                         </a>
                                                     </div>
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="projects.html" class="project-box">
+                                                        <a href="https://lichevskii.itch.io/numbercruncher" class="project-box">
                                                             <div class="project-box-inner">
-                                                                <h5>Rennovate Toilet</h5>
-                                                                <div class="project-category">House Design</div>
+                                                                <h5>Project Rise</h5>
+                                                                <div class="project-category">Game Development</div>
+                                                                <div class="project-category">Role: Multiplayer Network Developer & Terrain Island Designer</div>
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
+                                                   <!-- <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Rennovate Toilet</h5>
@@ -429,7 +434,7 @@
                 </div>
             </div>
         </div> -->
-        <div data-anchor="page5" class="pp-scrollable text-white section section-6">
+       <!-- <div data-anchor="page5" class="pp-scrollable text-white section section-6">
             <div class="scroll-wrap">
                 <div class="section-bg" style="background-image:url(images/bg/bg3.jpg);"></div>
                 <div class="scrollable-content">
@@ -518,7 +523,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <!-- <div data-anchor="page6" class="pp-scrollable section section-4">
             <div class="scroll-wrap">
                 <div class="scrollable-content">
@@ -648,7 +653,7 @@
                 </div>
             </div>
         </div> -->
-        <div data-anchor="page8" class="pp-scrollable section section-6">
+        <!--<div data-anchor="page8" class="pp-scrollable section section-6">
             <div class="scroll-wrap">
                 <div class="scrollable-content">
                     <div class="vertical-centred">
@@ -694,7 +699,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- Modals success -->
 
