--- a/projects.html
+++ b/projects.html
@@ -53,12 +53,12 @@
                 <a href="index.html#page">Home</a>
             </li>
             <li data-menuanchor="page2">
-                <a href="index.html#page2">Specialization</a>
+                <a href="index.html#page2">Quick About Me</a>
             </li>
             <li data-menuanchor="page3">
                 <a href="index.html#page3">Projects</a>
             </li>
-            <li data-menuanchor="page4">
+            <!--<li data-menuanchor="page4">
                 <a href="index.html#page4">Services</a>
             </li>
             <li data-menuanchor="page6">
@@ -66,7 +66,7 @@
             </li>
             <li data-menuanchor="page7">
                 <a href="index.html#page7">Contact</a>
-            </li>
+            </li>-->
         </ul>
         <div class="menu-footer right-boxed">
             <div class="social-list">
@@ -86,7 +86,8 @@
             </div>
             <div class="copy">
                 <!--© Jonny 2017. All Rights Reseverd<br> ??? its open source so i dont think this is necessary but ill include the designed by-->
-                Original Temp Design by LoganCee
+                Email: JustinRioux0@outlook.com </br></br>
+                <!-- I changed to much for this Original Temp Design by LoganCee-->
             </div>
         </div>
     </div>
