--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <div class="section-bg" style="background-image:url(images/Projects/4GameJam2025/BubbleUnknown_Gameplay_1.gif);"></div>
                     <div class="section-bg" style="background-image:url(images/Projects/5ArduinoStreamDeck/StreamDeck_2_Edited.PNG);">
                         <!-- Very Bad (Sorry Future Me) but im out of time -->
-                        <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay muted>
+                        <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay loop muted>
                         <source src="images/Projects/5ArduinoStreamDeck/Arduino_1_BetterQuality.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                         </video>
