minor changes to the css to allow the label to appear inside the input
+ added a button for reference later

--- a/MiniFeatures/FloatingTextLabel/testempty.html
+++ b/MiniFeatures/FloatingTextLabel/testempty.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <!-- Content Addition -->
-                                     <div class="field">
-                                        <input type="email" id="email" placeholder="">
-                                        <label for="email">Email</label>
-                                     </div>
+    <div class="field">
+        <input type="email" id="email" placeholder="">
+        <label for="email">Email</label>
+        <button class="tempbuttonclass" for="email"> Submit </button>
+    </div>
                                      
 </body>
 </html>
