messing with the button layout

--- a/MiniFeatures/FloatingTextLabel/testempty.html
+++ b/MiniFeatures/FloatingTextLabel/testempty.html
@@ -11,7 +11,7 @@
     <div class="field">
         <input type="email" id="email" placeholder="">
         <label for="email">Email</label>
-        <button class="tempbuttonclass" for="email"> Submit </button>
+        <button type="submit" class="tempbuttonclass"> Submit </button>
     </div>
                                      
 </body>
